<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivEventDetailsImage"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/travel_1"
            android:scaleType="centerCrop"
            />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Title.Bold"
            android:id="@+id/tvEventDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/placeholder_event_name"/>


        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Subtitle"
            android:id="@+id/tvEventDetailsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/placeholder_event_description"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Title.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/prompt_itinerary"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Subtitle"
            android:id="@+id/tvEventDetailsItinerary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/placeholder_event_description"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Title.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/prompt_cost"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Subtitle"
            android:id="@+id/tvEventDetailsCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/placeholder_event_cost"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Title.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/prompt_location"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Subtitle"
            android:id="@+id/tvEventDetailsMeetingPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/placeholder_event_location_1"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Subtitle"
            android:id="@+id/tvEventDetailsDestinationPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/placeholder_event_location_2"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Title.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/prompt_reviews"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEventDetailsReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>



        <com.google.android.material.button.MaterialButton
            style="@style/Button.Filled"
            android:id="@+id/btnEventDetailAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            tools:text="@string/placeholder_button"
            app:icon="@drawable/icon_add_circle"
            />


    </LinearLayout>

</ScrollView>