<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_user_home"
        android:enabled="true"
        android:title="@string/prompt_dashboard"
        android:icon="@drawable/icon_home_store"/>


    <item
        android:id="@+id/menu_user_profile"
        android:enabled="true"
        android:title="@string/prompt_profile"
        android:icon="@drawable/icon_person"/>

    <item
        android:id="@+id/menu_user_history"
        android:enabled="true"
        android:title="@string/prompt_history"
        android:icon="@drawable/icon_list_items"/>

    <item
        android:id="@+id/menu_user_settings"
        android:enabled="true"
        android:title="@string/prompt_dashboard"
        android:icon="@drawable/icon_settings"/>


</menu>