<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.register.RegisterSelectionActivity">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Input.Outlined.Dropdown"
        android:id="@+id/tilRoleSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_centerInParent="true"
        android:hint="@string/selection_role">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/actRoleSelection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/placeholder_title"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/Button.Filled"
        android:id="@+id/btnRegisterOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilRoleSelection"
        android:layout_marginHorizontal="20dp"
        android:text="@string/action_continue"
        app:icon="@drawable/icon_arrow_forward"
        />

</RelativeLayout>