<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.login.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/turismo_go_transparent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Title"
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivLogo"
            android:layout_centerHorizontal="true"
            android:text="@string/login"/>

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.Main"
            android:id="@+id/cardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@id/tvLoginTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Input.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    app:endIconDrawable="@drawable/icon_email"
                    app:endIconMode="custom"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Input.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/Button.Filled"
                    android:id="@+id/btnLoginContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_continue"
                    />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Text.Title"
                    android:id="@+id/tvForgotAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textAlignment="center"
                    android:text="@string/action_forgot_password"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Title.Bold"
            android:id="@+id/tvRegisterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardLogin"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/register_new_account"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Text.Title"
            android:id="@+id/tvRegisterAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRegisterTitle"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/action_register_account"/>


        <include
            layout="@layout/layout_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRegisterAccount"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="50dp"/>

    </RelativeLayout>


</ScrollView>
